fix: text-mode and cropped recording btn on ios, record btn animation, small css fixes and refactoring

--- a/src/dotnet/UI.Blazor.App/Components/ChatActivities/chat-activities.css
+++ b/src/dotnet/UI.Blazor.App/Components/ChatActivities/chat-activities.css
@@ -1,5 +1,3 @@
-.chat-activity-panel {
-    /* TODO: change gap after TalkingMembersBanner update (Andrey Y) */
-    /*@apply gap-x-2 md:gap-x-0;*/
+.chat-activity-group {
     @apply gap-x-0;
 }
